# FIFA-world-cup

./: .gitignore  HANDOFF.md  README.md  TB2_IDP_2026I_Es.md  app.py  pyproject.toml  requirements-colab.txt  requirements.txt
config/: groups_2026.json  team_aliases.json
notebooks/: Proyecto_Mundial_2026.ipynb  Proyecto_Mundial_2026_Ejecutado.ipynb
scripts/: build_dataset.py  convert_pdf_to_md.py  download_data.py  train_models.py
src/mundial/: __init__.py  config.py  data.py  history.py  inference.py  models.py  prediction.py  schemas.py  simulation.py  statistical.py  training.py
tests/: test_data.py  test_models.py  test_schemas.py  test_simulation.py  test_training_state.py
