[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mundial-2026-ai"
version = "0.1.0"
description = "Sistema de prediccion y simulacion de la Copa Mundial FIFA 2026"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

